# consoleVideoPlayer

./: .gitignore  CMakeLists.txt  README.md  consoleVideoPlayer.config.json  consoleVideoPlayer.service
src/: JackTransportClient.cpp  JackTransportClient.h  KeyboardController.cpp  KeyboardController.h  Overlay.cpp  Overlay.h  UdpReceiver.cpp  UdpReceiver.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
